--- a/Now!/res/values/strings.xml
+++ b/Now!/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">Now!</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="future">In The Future</string>
+    <string name="todoText">What do you want to do?</string>
 
 </resources>
